# QtSatellite

./: .gitignore  CMakeLists.txt  ConeModel.cpp  ConeModel.h  CustomCameraController.cpp  CustomCameraController.h  EarthModel.cpp  Light.cpp  Light.h  MainWindow.cpp  MainWindow.h  README.md  SatelliteModel.cpp  SatelliteModel.h  SceneWidget.cpp  SceneWidget.h  StarFinderModel.cpp  StarFinderModel.h  TorusModel.cpp  TorusModel.h  resources.qrc
.github/workflows/: windows.yml
shaders/: satellite.fbx  satellite.mtl  starFinder.fbx
src/: CMakeLists.txt  CustomCameraController.cpp  EarthModel.h  Light.h  MainWindow.cpp  SceneWidget.h  StarFinderModel.cpp  TorusModel.cpp  resources.qrc
src/shaders/: starFinder.mtl
